// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(TimeInput)
    name="time-input"
  >
    <TimeInput
      disabled={false}
      hourAttributes={Object {}}
      inputAttributes={Object {}}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isIncomplete={false}
      isInvalid={false}
      isInvalidMeridiem={false}
      minuteAttributes={Object {}}
      name="time-input"
      onBlur={null}
      onChange={null}
      required={false}
      secondAttributes={Object {}}
      showSeconds={false}
      variant="24-hour"
    >
      <div
        className="time-input-container orion-fusion-theme"
      >
        <div
          className="time-input"
        >
          <input
            name="time-input"
            type="hidden"
            value=""
          />
          <Input
            aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
            aria-label="Terra.timeInput.hours"
            className="time-input-hour"
            disabled={false}
            isIncomplete={false}
            isInvalid={false}
            maxLength="2"
            name="terra-time-hour-time-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="2"
            type="text"
            value=""
          >
            <input
              aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Terra.timeInput.hours"
              className="form-input orion-fusion-theme time-input-hour"
              disabled={false}
              maxLength="2"
              name="terra-time-hour-time-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="2"
              type="text"
              value=""
            />
          </Input>
          <span
            className="time-spacer"
          >
            :
          </span>
          <Input
            aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
            aria-label="Terra.timeInput.minutes"
            className="time-input-minute"
            disabled={false}
            isIncomplete={false}
            isInvalid={false}
            maxLength="2"
            name="terra-time-minute-time-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="2"
            type="text"
            value=""
          >
            <input
              aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Terra.timeInput.minutes"
              className="form-input orion-fusion-theme time-input-minute"
              disabled={false}
              maxLength="2"
              name="terra-time-minute-time-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="2"
              type="text"
              value=""
            />
          </Input>
        </div>
        <div
          aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
          className="format-text"
          id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
        >
          (Terra.timeInput.hh:Terra.timeInput.mm)
        </div>
      </div>
    </TimeInput>
  </InjectIntl(TimeInput)>
</ThemeContextProvider>
`;

exports[`should ignore invalid times properly 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should ignore invalid times with seconds properly 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should not have duplicate ids on the page when multiple date pickers are initialized 1`] = `
<div
  intl="[object Object]"
>
  <div
    class="time-input-container"
  >
    <div
      class="time-input"
    >
      <input
        name="time-input"
        type="hidden"
        value=""
      />
      <input
        aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.timeInput.hours"
        class="form-input time-input-hour"
        maxlength="2"
        name="terra-time-hour-time-input"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="time-spacer"
      >
        :
      </span>
      <input
        aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.timeInput.minutes"
        class="form-input time-input-minute"
        maxlength="2"
        name="terra-time-minute-time-input"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
    </div>
    <div
      class="button-group meridiem-button-group"
    >
      <button
        aria-disabled="false"
        aria-pressed="true"
        class="button neutral button-group-button is-selected meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.am
          </span>
        </span>
      </button>
      <button
        aria-disabled="false"
        aria-pressed="false"
        class="button neutral button-group-button meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.pm
          </span>
        </span>
      </button>
    </div>
    <div
      aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
      class="format-text"
      id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
    >
      (Terra.timeInput.hh:Terra.timeInput.mm)
    </div>
  </div>
  <div
    class="time-input-container"
  >
    <div
      class="time-input"
    >
      <input
        name="time-input-2"
        type="hidden"
        value=""
      />
      <input
        aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.timeInput.hours"
        class="form-input time-input-hour"
        maxlength="2"
        name="terra-time-hour-time-input-2"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="time-spacer"
      >
        :
      </span>
      <input
        aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.timeInput.minutes"
        class="form-input time-input-minute"
        maxlength="2"
        name="terra-time-minute-time-input-2"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
    </div>
    <div
      class="button-group meridiem-button-group"
    >
      <button
        aria-disabled="false"
        aria-pressed="true"
        class="button neutral button-group-button is-selected meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.am
          </span>
        </span>
      </button>
      <button
        aria-disabled="false"
        aria-pressed="false"
        class="button neutral button-group-button meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.pm
          </span>
        </span>
      </button>
    </div>
    <div
      aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
      class="format-text"
      id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
    >
      (Terra.timeInput.hh:Terra.timeInput.mm)
    </div>
  </div>
  <div
    class="time-input-container"
  >
    <div
      class="time-input"
    >
      <input
        name="time-input-3"
        type="hidden"
        value=""
      />
      <input
        aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.timeInput.hours"
        class="form-input time-input-hour"
        maxlength="2"
        name="terra-time-hour-time-input-3"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="time-spacer"
      >
        :
      </span>
      <input
        aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.timeInput.minutes"
        class="form-input time-input-minute"
        maxlength="2"
        name="terra-time-minute-time-input-3"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
    </div>
    <div
      class="button-group meridiem-button-group"
    >
      <button
        aria-disabled="false"
        aria-pressed="true"
        class="button neutral button-group-button is-selected meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.am
          </span>
        </span>
      </button>
      <button
        aria-disabled="false"
        aria-pressed="false"
        class="button neutral button-group-button meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.pm
          </span>
        </span>
      </button>
    </div>
    <div
      aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
      class="format-text"
      id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
    >
      (Terra.timeInput.hh:Terra.timeInput.mm)
    </div>
  </div>
</div>
`;

exports[`should pass in refCallback as the ref prop of the hour input element 1`] = `
<TimeInput
  disabled={false}
  hourAttributes={Object {}}
  inputAttributes={Object {}}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isIncomplete={false}
  isInvalid={false}
  isInvalidMeridiem={false}
  minuteAttributes={Object {}}
  name="time-input"
  onBlur={null}
  onChange={null}
  refCallback={
    [MockFunction] {
      "calls": Array [
        Array [
          <input
            aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
            aria-label="Terra.timeInput.hours"
            class="form-input time-input-hour"
            maxlength="2"
            name="terra-time-hour-time-input"
            pattern="\\\\d*"
            size="2"
            type="text"
            value=""
          />,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  required={false}
  secondAttributes={Object {}}
  showSeconds={false}
  variant="24-hour"
>
  <div
    className="time-input-container"
  >
    <div
      className="time-input"
    >
      <input
        name="time-input"
        type="hidden"
        value=""
      />
      <Input
        aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.timeInput.hours"
        className="time-input-hour"
        disabled={false}
        isIncomplete={false}
        isInvalid={false}
        maxLength="2"
        name="terra-time-hour-time-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        pattern="\\\\d*"
        refCallback={[Function]}
        required={false}
        size="2"
        type="text"
        value=""
      >
        <input
          aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
          aria-label="Terra.timeInput.hours"
          className="form-input time-input-hour"
          disabled={false}
          maxLength="2"
          name="terra-time-hour-time-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          pattern="\\\\d*"
          required={false}
          size="2"
          type="text"
          value=""
        />
      </Input>
      <span
        className="time-spacer"
      >
        :
      </span>
      <Input
        aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.timeInput.minutes"
        className="time-input-minute"
        disabled={false}
        isIncomplete={false}
        isInvalid={false}
        maxLength="2"
        name="terra-time-minute-time-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        pattern="\\\\d*"
        refCallback={[Function]}
        required={false}
        size="2"
        type="text"
        value=""
      >
        <input
          aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
          aria-label="Terra.timeInput.minutes"
          className="form-input time-input-minute"
          disabled={false}
          maxLength="2"
          name="terra-time-minute-time-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          pattern="\\\\d*"
          required={false}
          size="2"
          type="text"
          value=""
        />
      </Input>
    </div>
    <div
      aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
      className="format-text"
      id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
    >
      (Terra.timeInput.hh:Terra.timeInput.mm)
    </div>
  </div>
</TimeInput>
`;

exports[`should render a 12 hour clock time input with seconds input 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <ButtonGroup
    className="meridiem-button-group"
    isBlock={false}
    onChange={[Function]}
    selectedKeys={
      Array [
        "Terra.timeInput.am",
      ]
    }
  >
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.am"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.am"
    />
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.pm"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.pm"
    />
  </ButtonGroup>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a 12 hour timepicker meridiem with buttons and seconds input when viewed on a mobile device 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour with-second"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute with-second"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.seconds"
      class="form-input time-input-second"
      maxlength="2"
      name="terra-time-second-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    class="button-group meridiem-button-group"
  >
    <button
      aria-disabled="false"
      aria-pressed="true"
      class="button neutral button-group-button is-selected meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.am
        </span>
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-pressed="false"
      class="button neutral button-group-button meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.pm
        </span>
      </span>
    </button>
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    class="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a 12 hour timepicker meridiem with buttons when viewed on a mobile device 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    class="button-group meridiem-button-group"
  >
    <button
      aria-disabled="false"
      aria-pressed="true"
      class="button neutral button-group-button is-selected meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.am
        </span>
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-pressed="false"
      class="button neutral button-group-button meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.pm
        </span>
      </span>
    </button>
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    class="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a 24 hour timepicker properly on mobile devices 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    class="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a 24 hour timepicker with seconds properly on mobile devices 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour with-second"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute with-second"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.seconds"
      class="form-input time-input-second"
      maxlength="2"
      name="terra-time-second-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    class="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a default time input 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a disabled time input 1`] = `
<div
  className="time-input-container"
>
  <div
    className="disabled time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={true}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={true}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with 12 hour clock set 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <ButtonGroup
    className="meridiem-button-group"
    isBlock={false}
    onChange={[Function]}
    selectedKeys={
      Array [
        "Terra.timeInput.am",
      ]
    }
  >
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.am"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.am"
    />
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.pm"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.pm"
    />
  </ButtonGroup>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with a default time 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value="T10:45"
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="10"
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="45"
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with custom attributes 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      id="terra-time-input"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      id="terra-time-input"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with onBlur 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with onChange 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with onFocus 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with seconds input 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a time input with seconds input and a value 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value="T12:12:12"
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="12"
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="12"
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="12"
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a time input with seconds input and custom attributes 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      id="terra-time-input"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      id="terra-time-input"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      id="id-0"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should set the labels with the correct htmlFor a 24 hour timepicker properly on mobile devices 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour"
      id="id-2"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute"
      id="id-1"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm)"
    class="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should set the labels with the correct htmlFor a 24 hour timepicker properly on mobile devices 2`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour with-second"
      id="id-2"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute with-second"
      id="id-1"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
      aria-label="Terra.timeInput.seconds"
      class="form-input time-input-second"
      id="id-0"
      maxlength="2"
      name="terra-time-second-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Terra.timeInput.timeFormatLabel (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    class="format-text"
    id="terra-time-input-description-format-00000000-0000-0000-0000-000000000000"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;
